--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -24910,5 +24910,157 @@
         "published": "Mon, 22 Dec 2025 09:28:56 +0000",
         "source": "Digit.in",
         "summary": "For years, gaming laptops have pushed performance boundaries while largely sticking to the same familiar shape. Faster GPUs, better cooling, brighter displays, but always within a fixed screen size. That might change soon. After experimenting with rollable displays for productivity-focused machines, Lenovo now appears ready to bring the same ambitious idea to gamers. Reports of [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/expired-tired-wired-ai-friends/",
+        "title": "Tech Disrupted Friendship. It\u2019s Time to Bring It Back",
+        "link": "https://www.wired.com/story/expired-tired-wired-ai-friends/",
+        "published": "Mon, 22 Dec 2025 11:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Two decades ago social media promised to connect people with pals far and wide. Twenty years online has left us turning to AI for kinship. IRL companionship is the future."
+    },
+    {
+        "id": "https://www.wired.com/story/expired-tired-wired-wearables/",
+        "title": "Brain Gear Is the Hot New Wearable",
+        "link": "https://www.wired.com/story/expired-tired-wired-wearables/",
+        "published": "Mon, 22 Dec 2025 11:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Smartwatches are cool and all, but have you considered wearable neurotech?"
+    },
+    {
+        "id": "https://www.wired.com/story/expired-tired-wired-tesla/",
+        "title": "How Elon Musk Won His No Good, Very Bad Year",
+        "link": "https://www.wired.com/story/expired-tired-wired-tesla/",
+        "published": "Mon, 22 Dec 2025 11:00:00 +0000",
+        "source": "WIRED",
+        "summary": "The billionaire\u2019s involvement with the Trump administration and DOGE had deep impacts on Tesla\u2019s bottom line. But Elon Musk was still able to turn his attention to SpaceX."
+    },
+    {
+        "id": "https://www.wired.com/story/expired-tired-wired-political-influencers/",
+        "title": "Politics Is Fandom; Fascism Is Fanfic",
+        "link": "https://www.wired.com/story/expired-tired-wired-political-influencers/",
+        "published": "Mon, 22 Dec 2025 11:00:00 +0000",
+        "source": "WIRED",
+        "summary": "From Zohran Mamdani\u2019s campaign to the US government\u2019s Halo memes, fandom has become the defining language of US politics."
+    },
+    {
+        "id": "https://www.wired.com/story/the-future-of-evs-is-foggy-but-california-still-wants-more-of-them/",
+        "title": "The Future of EVs Is Foggy\u2014but California Still Wants More of Them",
+        "link": "https://www.wired.com/story/the-future-of-evs-is-foggy-but-california-still-wants-more-of-them/",
+        "published": "Mon, 22 Dec 2025 10:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Hamstrung by lawsuits, the state can\u2019t officially keep its goal to ban new gas-powered car sales by 2035. But it\u2019s going to keep trying."
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/22/1130153/geothermal-energy-carbon-capture-kenya-climate-solution/",
+        "title": "Welcome to Kenya\u2019s Great Carbon Valley: a bold new gamble to fight climate change",
+        "link": "https://www.technologyreview.com/2025/12/22/1130153/geothermal-energy-carbon-capture-kenya-climate-solution/",
+        "published": "Mon, 22 Dec 2025 10:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "The earth around Lake Naivasha, a shallow freshwater basin in south-central Kenya, does not seem to want to lie still.&#160; Ash from nearby Mount Longonot, which erupted as recently as the 1860s, remains in the ground. Obsidian caves and jagged stone towers preside over the steam that spurts out of fissures in the soil and&#8230;"
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/22/1130288/gene-therapies-muscle-growth-erectile-dysfunction-radical-longevity/",
+        "title": "This company is developing gene therapies for muscle growth, erectile dysfunction, and \u201cradical longevity\u201d",
+        "link": "https://www.technologyreview.com/2025/12/22/1130288/gene-therapies-muscle-growth-erectile-dysfunction-radical-longevity/",
+        "published": "Mon, 22 Dec 2025 09:55:44 +0000",
+        "source": "MIT Technology Review",
+        "summary": "At some point next month, a handful of volunteers will be injected with two experimental gene therapies as part of an unusual clinical trial. The drugs are potential longevity therapies, says Ivan Morgunov, the CEO of Unlimited Bio, the company behind the trial. His long-term goal: to achieve radical human life extension. The 12 to&#8230;"
+    },
+    {
+        "id": "https://gregmckeown.com/if-you-dont-design-your-career-someone-else-will/",
+        "title": "If You Don't Design Your Career, Someone Else Will",
+        "link": "https://gregmckeown.com/if-you-dont-design-your-career-someone-else-will/",
+        "published": "Mon, 22 Dec 2025 10:27:52 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46352930\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/uber-lyft-to-test-baidu-robotaxis-in-uk-from-next-year/articleshow/126120570.cms",
+        "title": "Uber, Lyft to test Baidu robotaxis in UK from next year",
+        "link": "https://economictimes.indiatimes.com/tech/technology/uber-lyft-to-test-baidu-robotaxis-in-uk-from-next-year/articleshow/126120570.cms",
+        "published": "Mon, 22 Dec 2025 16:10:24 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "It highlights how ride-hailing platforms are \u200caccelerating autonomous \u200crollout through partnerships, positioning London as an early proving ground for \u200clarge-scale robotaxi services in Europe."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/rs-43-lakh-iphone-purchase-rs-68600-tips-india-shopping-swiggy-instamart",
+        "title": "From a Rs 4.3 lakh iPhone purchase to Rs 68,600 in tips: How India shopped on Swiggy Instamart",
+        "link": "https://yourstory.com/2025/12/rs-43-lakh-iphone-purchase-rs-68600-tips-india-shopping-swiggy-instamart",
+        "published": "Mon, 22 Dec 2025 11:04:34 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Swiggy Instamart\u2019s 2025 order data, spanning Rs 10 printouts, Rs 4.3 lakh iPhone carts, four milk packets a second, and 400% growth in gold purchases, maps how quick commerce has expanded from groceries into a full-scale retail habit."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/plasmagen-raises-rs-150-cr-led-by-vins-bioproducts",
+        "title": "PlasmaGen raises Rs 150 Cr led by ViNS Bioproducts",
+        "link": "https://yourstory.com/2025/12/plasmagen-raises-rs-150-cr-led-by-vins-bioproducts",
+        "published": "Mon, 22 Dec 2025 10:45:40 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "PlasmaGen said the fresh capital will be used to expand its product portfolio, strengthen internal capabilities and support entry into international markets."
+    },
+    {
+        "id": "https://inc42.com/buzz/mswipe-gets-payment-aggregator-licence-for-online-offline-payments/",
+        "title": "Mswipe Gets Payment Aggregator Licence For Online & Offline Payments",
+        "link": "https://inc42.com/buzz/mswipe-gets-payment-aggregator-licence-for-online-offline-payments/",
+        "published": "Mon, 22 Dec 2025 10:16:15 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"After Innoviti, Razorpay &amp; Pine Labs, Mswipe Receives RBI Nod For Payment Aggregator License\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2022/08/Mswipe-Feature-1.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Mumbai-based fintech startup Mswipe Technologies has received the final payment aggregator (PA) licence from the Reserve Bank of India (RBI)&#8230;"
+    },
+    {
+        "id": "https://www.medianama.com/2025/12/223-swiggy-instamart-offline-pilot-store-gurugram/",
+        "title": "What Instamart\u2019s offline pilot reveals about quick commerce\u2019s physical hedge",
+        "link": "https://www.medianama.com/2025/12/223-swiggy-instamart-offline-pilot-store-gurugram/",
+        "published": "Mon, 22 Dec 2025 10:55:16 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>Swiggy\u2019s Instamart is testing an offline experiential store in Gurugram, allowing customers to browse and buy products in person. The pilot signals how quick commerce platforms are hedging beyond dark stores.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-swiggy-instamart-offline-pilot-store-gurugram/\">What Instamart\u2019s offline pilot reveals about quick commerce\u2019s physical hedge</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.medianama.com/2025/12/223-ed-yuvraj-singh-sonu-sood-in-1xbet-case/",
+        "title": "ED Attaches Assets Of Yuvraj Singh, Sonu Sood And Others In 1xBet Case",
+        "link": "https://www.medianama.com/2025/12/223-ed-yuvraj-singh-sonu-sood-in-1xbet-case/",
+        "published": "Mon, 22 Dec 2025 10:51:07 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>The ED said that celebrities like Yuvraj Singh, Sonu Sood, Urvashi Rautela and others knowingly entered agreements with foreign entities to promote 1xBet through its surrogates, and hence these are proceeds of crime. </p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-ed-yuvraj-singh-sonu-sood-in-1xbet-case/\">ED Attaches Assets Of Yuvraj Singh, Sonu Sood And Others In 1xBet Case</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.digit.in/te/news/telecom/jio-happy-new-year-plan-announced-with-complete-entertainment-benefits.html",
+        "title": "Jio Happy New Year Plan: \u0c2a\u0c4d\u0c32\u0c3e\u0c28\u0c4d \u0c12\u0c15\u0c4d\u0c15\u0c1f\u0c47 \u0c15\u0c3e\u0c28\u0c40 \u0c0e\u0c28\u0c4d\u0c28\u0c4b \u0c32\u0c3e\u0c2d\u0c3e\u0c32\u0c41 \u0c05\u0c02\u0c26\u0c3f\u0c38\u0c4d\u0c24\u0c41\u0c02\u0c26\u0c3f.!",
+        "link": "https://www.digit.in/te/news/telecom/jio-happy-new-year-plan-announced-with-complete-entertainment-benefits.html",
+        "published": "Mon, 22 Dec 2025 10:56:30 +0000",
+        "source": "Digit.in",
+        "summary": "Jio Happy New Year Plan: 2026 \u0c15\u0c4a\u0c24\u0c4d\u0c24 \u0c38\u0c02\u0c35\u0c24\u0c4d\u0c38\u0c30\u0c3e\u0c28\u0c3f\u0c15\u0c3f \u0c38\u0c4d\u0c35\u0c3e\u0c17\u0c24\u0c02 \u0c1a\u0c46\u0c2c\u0c41\u0c24\u0c42, \u0c30\u0c3f\u0c32\u0c2f\u0c28\u0c4d\u0c38\u0c4d \u0c1c\u0c3f\u0c2f\u0c4b \u0c24\u0c28 \u0c2f\u0c42\u0c1c\u0c30\u0c4d\u0c32 \u0c15\u0c4b\u0c38\u0c02 \u0c15\u0c4a\u0c24\u0c4d\u0c24 \u0c06\u0c2b\u0c30\u0c4d \u0c05\u0c02\u0c26\u0c3f\u0c02\u0c1a\u0c3f\u0c02\u0c26\u0c3f. \u0c30\u0c3f\u0c32\u0c2f\u0c28\u0c4d\u0c38\u0c4d \u0c38\u0c30\u0c3f\u0c15\u0c4a\u0c24\u0c4d\u0c24\u0c17\u0c3e \u0c05\u0c02\u0c26\u0c3f\u0c02\u0c1a\u0c3f\u0c28 \u0c08 \u0c32\u0c47\u0c1f\u0c46\u0c38\u0c4d\u0c1f\u0c4d \u0c06\u0c2b\u0c30\u0c4d \u0c24\u0c4b \u0c15\u0c47\u0c35\u0c32\u0c02 500 \u0c30\u0c42\u0c2a\u0c3e\u0c2f\u0c32 \u0c27\u0c30\u0c32\u0c4b\u0c28\u0c47 \u0c05\u0c28\u0c4d\u0c32\u0c3f\u0c2e\u0c3f\u0c1f\u0c46\u0c21\u0c4d \u0c15\u0c3e\u0c32\u0c3f\u0c02\u0c17\u0c4d, \u0c05\u0c28\u0c4d\u0c32\u0c3f\u0c2e\u0c3f\u0c1f\u0c46\u0c21\u0c4d \u0c21\u0c47\u0c1f\u0c3e \u0c2e\u0c30\u0c3f\u0c2f\u0c41 \u0c05\u0c28\u0c4d\u0c32\u0c3f\u0c2e\u0c3f\u0c1f\u0c46\u0c21\u0c4d \u0c0e\u0c02\u0c1f\u0c30\u0c4d\u0c1f\u0c48\u0c28\u0c4d\u0c2e\u0c46\u0c02\u0c1f\u0c4d \u0c2e\u0c4a\u0c24\u0c4d\u0c24\u0c02 \u0c2e\u0c42\u0c21\u0c41 \u0c32\u0c3e\u0c2d\u0c3e\u0c32\u0c41 \u0c15\u0c42\u0c21\u0c3e \u0c28\u0c46\u0c32 \u0c2e\u0c4a\u0c24\u0c4d\u0c24\u0c02 \u0c05\u0c02\u0c26\u0c41\u0c15\u0c4b\u0c35\u0c1a\u0c4d\u0c1a\u0c41. \u0c2e\u0c30\u0c3f \u0c30\u0c3f\u0c32\u0c2f\u0c28\u0c4d\u0c38\u0c4d \u0c1c\u0c3f\u0c2f\u0c4b \u0c05\u0c02\u0c26\u0c3f\u0c02\u0c1a\u0c3f\u0c28 \u0c08 \u0c15\u0c4a\u0c24\u0c4d\u0c24 \u0c28\u0c4d\u0c2f\u0c42 \u0c07\u0c2f\u0c30\u0c4d \u0c06\u0c2b\u0c30\u0c4d \u0c17\u0c41\u0c30\u0c3f\u0c02\u0c1a\u0c3f \u0c24\u0c46\u0c32\u0c41\u0c38\u0c41\u0c15\u0c41\u0c02\u0c26\u0c3e\u0c2e\u0c3e. Survey [&#8230;]"
+    },
+    {
+        "id": "https://www.digit.in/bn/news/mobile-phones/grab-motorola-edge-50-price-drop-over-rs-8000-on-amazon-deal.html",
+        "title": "8000 \u099f\u09be\u0995\u09be\u09b0 \u09ac\u09c7\u09b6\u09bf \u099b\u09be\u09a1\u09bc\u09c7 \u09ac\u09bf\u0995\u09cd\u09b0\u09bf \u09b9\u099a\u09cd\u099b\u09c7 32MP \u09b8\u09c7\u09b2\u09ab\u09bf \u0995\u09cd\u09af\u09be\u09ae\u09c7\u09b0\u09be \u098f\u09ac\u0982 5000mAh \u09ac\u09cd\u09af\u09be\u099f\u09be\u09b0\u09bf \u09b8\u09b9 Motorola 5G \u09b8\u09cd\u09ae\u09be\u09b0\u09cd\u099f\u09ab\u09cb\u09a8",
+        "link": "https://www.digit.in/bn/news/mobile-phones/grab-motorola-edge-50-price-drop-over-rs-8000-on-amazon-deal.html",
+        "published": "Mon, 22 Dec 2025 10:50:08 +0000",
+        "source": "Digit.in",
+        "summary": "\u0986\u09aa\u09a8\u09bf \u09af\u09a6\u09bf \u09ae\u09cb\u099f\u09cb\u09b0\u09cb\u09b2\u09be\u09b0 \u09ae\u09bf\u09a1-\u09b0\u09c7\u099e\u09cd\u099c \u09b8\u09cd\u09ae\u09be\u09b0\u09cd\u099f\u09ab\u09cb\u09a8 Motorola Edge 50 \u0995\u09c7\u09a8\u09be\u09b0 \u0995\u09a5\u09be \u09ad\u09be\u09ac\u099b\u09c7\u09a8 \u09a4\u09ac\u09c7 \u098f\u0987 \u098f\u099f\u09be\u0987 \u09b8\u09c1\u09af\u09cb\u0997\u0964 \u0986\u09b8\u09b2\u09c7 Amazon \u09b8\u09be\u0987\u099f\u09c7 \u09ae\u09cb\u099f\u09cb\u09b0\u09cb\u09b2\u09be \u098f\u099c 50 \u09b8\u09cd\u09ae\u09be\u09b0\u09cd\u099f\u09ab\u09cb\u09a8 \u09a6\u09be\u09ae \u0995\u09ae \u09b9\u0993\u09df\u09be\u09b0 \u09aa\u09be\u09b6\u09be\u09aa\u09be\u09b6\u09bf \u09ac\u09cd\u09af\u09be\u0999\u09cd\u0995 \u0985\u09ab\u09be\u09b0\u09c7\u0993 \u0995\u09c7\u09a8\u09be \u09af\u09be\u09ac\u09c7\u0964 \u09ae\u09cb\u099f\u09cb\u09b0\u09cb\u09b2\u09be\u09b0 \u098f\u0987 \u09b8\u09cd\u09ae\u09be\u09b0\u09cd\u099f\u09ab\u09cb\u09a8\u09c7 50MP \u09aa\u09cd\u09b0\u09be\u0987\u09ae\u09be\u09b0\u09bf \u0995\u09cd\u09af\u09be\u09ae\u09c7\u09b0\u09be \u09b0\u09af\u09bc\u09c7\u099b\u09c7 \u098f\u09ac\u0982 \u098f\u099f\u09bf \u0995\u09cb\u09af\u09bc\u09be\u09b2\u0995\u09ae \u09b8\u09cd\u09a8\u09cd\u09af\u09be\u09aa\u09a1\u09cd\u09b0\u09be\u0997\u09a8 7 \u099c\u09c7\u09a8\u09be\u09b0\u09c7\u09b6\u09a8 1 \u0985\u09cd\u09af\u09be\u0995\u09cd\u09b8\u09bf\u09b2\u09be\u09b0\u09c7\u099f\u09c7\u09a1 \u098f\u09a1\u09bf\u09b6\u09a8 \u09aa\u09cd\u09b0\u09b8\u09c7\u09b8\u09b0 \u0995\u09be\u099c \u0995\u09b0\u09c7\u0964 \u098f\u0996\u09be\u09a8\u09c7 \u0986\u09ae\u09b0\u09be \u09ae\u09cb\u099f\u09cb\u09b0\u09cb\u09b2\u09be \u098f\u099c 50 \u09ab\u09cb\u09a8\u09c7 [&#8230;]"
+    },
+    {
+        "id": "https://www.digit.in/hi/features/general/china-nanjing-gps-beidou-outage-satellite-navigation-failure-india-navic-implications.html",
+        "title": "6 \u0918\u0902\u091f\u0947 \u0915\u0947 \u0932\u093f\u090f \u2018\u0905\u0902\u0927\u093e\u2019 \u0939\u094b \u0917\u092f\u093e \u092a\u0942\u0930\u093e \u0936\u0939\u0930, GPS-BeiDou \u0926\u094b\u0928\u094b\u0902 \u092b\u0947\u0932, \u092b\u0942\u0921 \u0921\u093f\u0932\u0940\u0935\u0930\u0940 \u0938\u0947 \u0932\u0947\u0915\u0930 \u091f\u0948\u0915\u094d\u0938\u0940 \u0924\u0915 \u092d\u091f\u0915\u0947, \u092d\u093e\u0930\u0924 \u0915\u093f\u0924\u0928\u093e \u0924\u0948\u092f\u093e\u0930?",
+        "link": "https://www.digit.in/hi/features/general/china-nanjing-gps-beidou-outage-satellite-navigation-failure-india-navic-implications.html",
+        "published": "Mon, 22 Dec 2025 10:48:43 +0000",
+        "source": "Digit.in",
+        "summary": "\u0915\u0932\u094d\u092a\u0928\u093e \u0915\u0940\u091c\u093f\u090f \u0915\u093f \u0906\u092a \u090f\u0915 \u0905\u0928\u091c\u093e\u0928 \u0930\u093e\u0938\u094d\u0924\u0947 \u092a\u0930 \u0917\u093e\u0921\u093c\u0940 \u091a\u0932\u093e \u0930\u0939\u0947 \u0939\u0948\u0902, \u092a\u0942\u0930\u0940 \u0924\u0930\u0939 \u0938\u0947 Google Maps \u0915\u0947 \u092d\u0930\u094b\u0938\u0947, \u0914\u0930 \u0905\u091a\u093e\u0928\u0915 \u0906\u092a\u0915\u0940 \u0938\u094d\u0915\u094d\u0930\u0940\u0928 \u092c\u094d\u0932\u0948\u0902\u0915 \u0939\u094b \u091c\u093e\u090f. \u092f\u093e \u0906\u092a\u0928\u0947 \u0915\u0948\u092c \u092c\u0941\u0915 \u0915\u0940 \u0939\u094b, \u0932\u0947\u0915\u093f\u0928 \u0921\u094d\u0930\u093e\u0907\u0935\u0930 \u0915\u094b \u0906\u092a\u0915\u0940 \u0932\u094b\u0915\u0947\u0936\u0928 \u0939\u0940 \u0928 \u092e\u093f\u0932\u0947. \u091a\u0940\u0928 \u0915\u0947 \u090f\u0915 \u092c\u0921\u093c\u0947 \u0936\u0939\u0930 \u092e\u0947\u0902 \u0939\u093e\u0932 \u0939\u0940 \u092e\u0947\u0902 \u0910\u0938\u093e \u0939\u0940 \u0939\u0941\u0906, \u0932\u0947\u0915\u093f\u0928 \u092f\u0939 \u0915\u093f\u0938\u0940 [&#8230;]"
+    },
+    {
+        "id": "https://www.digit.in/news/mobile-phones/samsung-galaxy-s26-ultra-leaks-launch-date-price-camera-upgrades-and-more.html",
+        "title": "Samsung Galaxy S26 Ultra leaks: Launch date, price, camera upgrades and more",
+        "link": "https://www.digit.in/news/mobile-phones/samsung-galaxy-s26-ultra-leaks-launch-date-price-camera-upgrades-and-more.html",
+        "published": "Mon, 22 Dec 2025 10:34:08 +0000",
+        "source": "Digit.in",
+        "summary": "Samsung is reportedly working on its next flagship smartphone lineup, the Galaxy S26 series. This series is expected to include three models: Galaxy S26, Galaxy S26 Plus, and the most powerful one, the Galaxy S26 Ultra. Although Samsung has not officially revealed any details, recent leaks have given a glimpse of what users can expect [&#8230;]"
+    },
+    {
+        "id": "https://www.digit.in/news/entertainment/dhurandhar-ott-release-date-streaming-platform-and-other-details-you-need-to-know.html",
+        "title": "Dhurandhar OTT release date, streaming platform and other details you need to know",
+        "link": "https://www.digit.in/news/entertainment/dhurandhar-ott-release-date-streaming-platform-and-other-details-you-need-to-know.html",
+        "published": "Mon, 22 Dec 2025 10:34:05 +0000",
+        "source": "Digit.in",
+        "summary": "Ranveer Singh recently came back on the big screen with Dhurandhar, a spy action thriller that has been grabbing attention since its theatrical release. The film blends large-scale action sequences, intense drama and a fresh take on the Indian spy universe. With a runtime of over three hours, Dhurandhar offers a detailed and dramatic spy [&#8230;]"
     }
 ]
