📚 Auto-update: News data refreshed - 2025-12-22 15:12 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -25478,5 +25478,85 @@
         "published": "Mon, 22 Dec 2025 13:30:36 +0000",
         "source": "Digit.in",
         "summary": "Oppo is all set to launch the Oppo Find X9 Ultra, which is the latest flagship model by the Chinese smartphone brand. It will also be the latest addition to the Oppo Find X9 family. The device is expected to feature a powerful 200MP primary camera, complemented by dual periscope telephoto lenses. Other than that, [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/the-doomsday-glacier-is-getting-closer-and-closer-to-irreversible-collapse/",
+        "title": "The Doomsday Glacier Is Getting Closer and Closer to Irreversible Collapse",
+        "link": "https://www.wired.com/story/the-doomsday-glacier-is-getting-closer-and-closer-to-irreversible-collapse/",
+        "published": "Mon, 22 Dec 2025 14:43:09 +0000",
+        "source": "WIRED",
+        "summary": "An analysis of the expansion of cracks in the Thwaites Glacier over the past 20 years suggests that a total collapse could be only a matter of time."
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/paramount-has-an-updated-warner-bros-discovery-bid-144348321.html?src=rss",
+        "title": "Paramount has an updated Warner Bros. Discovery bid",
+        "link": "https://www.engadget.com/entertainment/paramount-has-an-updated-warner-bros-discovery-bid-144348321.html?src=rss",
+        "published": "Mon, 22 Dec 2025 14:43:48 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Paramount Skydance isn't giving up on obtaining Warner Bros. Discovery just yet. The company has <a href=\"https://www.prnewswire.com/news-releases/paramount-amends-its-superior-30-per-share-all-cash-offer-for-warner-bros-discovery-302647804.html\">amended its $108 billion offer</a> to include Larry Ellison's &quot;irrevocable personal guarantee&quot; equaling $40.4 billion. Ellison is the founder or Oracle and a backer of Skydance, created by his son David Ellison, Paramount Skydance's CEO.&nb"
+    },
+    {
+        "id": "https://en.agcm.it/en/media/press-releases/2025/12/A561",
+        "title": "Italian Competition Authority Fines Apple $115M for Abusing Dominant Position",
+        "link": "https://en.agcm.it/en/media/press-releases/2025/12/A561",
+        "published": "Mon, 22 Dec 2025 11:22:14 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46353261\">Comments</a>"
+    },
+    {
+        "id": "https://lucumr.pocoo.org/2025/12/22/a-year-of-vibes/",
+        "title": "A year of vibes",
+        "link": "https://lucumr.pocoo.org/2025/12/22/a-year-of-vibes/",
+        "published": "Mon, 22 Dec 2025 10:19:57 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46352875\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/pearos-linux-distro-looks-like-macos/",
+        "title": "This Linux distro makes your old laptop feel like a Mac - and it's free",
+        "link": "https://www.zdnet.com/article/pearos-linux-distro-looks-like-macos/",
+        "published": "Mon, 22 Dec 2025 14:59:15 GMT",
+        "source": "Latest news",
+        "summary": "pearOS makes switching from Mac easy. Here's why."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/mutual-fund-platform-powerup-money-raises-12m-funding-led-by-peak-xv",
+        "title": "Mutual fund platform PowerUp Money raises $12M funding led by Peak XV",
+        "link": "https://yourstory.com/2025/12/mutual-fund-platform-powerup-money-raises-12m-funding-led-by-peak-xv",
+        "published": "Mon, 22 Dec 2025 07:14:03 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "PowerUp Money plans to use the fresh capital to expand its research and advisory capabilities, scale its paid products, and invest in financial literacy initiatives."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/policy-tailwinds-benign-inflation-to-drive-fmcg-growth-in-2026",
+        "title": "Policy tailwinds, tax-relief and GST reform to drive FMCG growth in 2026: Experts",
+        "link": "https://yourstory.com/2025/12/policy-tailwinds-benign-inflation-to-drive-fmcg-growth-in-2026",
+        "published": "Mon, 22 Dec 2025 07:19:18 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "FMCG companies are expected to increase investments in technology, including automation, analytics, AI-led demand forecasting, supply chain optimisation, and personalised consumer engagement."
+    },
+    {
+        "id": "https://www.digit.in/news/mobile-phones/samsung-galaxy-m56-price-drops-to-under-rs-22000-on-flipkart-check-deal-details-here.html",
+        "title": "Samsung Galaxy M56 price drops to under Rs 22,000 on Flipkart: Check deal details here",
+        "link": "https://www.digit.in/news/mobile-phones/samsung-galaxy-m56-price-drops-to-under-rs-22000-on-flipkart-check-deal-details-here.html",
+        "published": "Mon, 22 Dec 2025 14:53:47 +0000",
+        "source": "Digit.in",
+        "summary": "If you have been looking to get a sturdy and durable Samsung phone without breaking the bank, the Samsung Galaxy M56 is a good option. Currently the device is being sold on Flipkart at Rs 21,204. Moreover, the customers can further avail extra discounts through some selected banks and cards. Samsung Galaxy M56 comes equipped [&#8230;]"
+    },
+    {
+        "id": "https://www.digit.in/news/entertainment/a-knight-of-the-seven-kingdoms-ott-release-date-platform-plot-cast-and-more.html",
+        "title": "A Knight of the Seven Kingdoms OTT release date, platform, plot, cast and more",
+        "link": "https://www.digit.in/news/entertainment/a-knight-of-the-seven-kingdoms-ott-release-date-platform-plot-cast-and-more.html",
+        "published": "Mon, 22 Dec 2025 14:49:09 +0000",
+        "source": "Digit.in",
+        "summary": "A Knight of the Seven Kingdoms is all set to expand the world of Westeros with a brand-new story. The series is a prequel to the popular Game of Thrones and focuses on a simpler yet meaningful journey of a knight and his young squire. Unlike grand battles for the throne, this show highlights honour, [&#8230;]"
+    },
+    {
+        "id": "https://www.digit.in/ml/news/mobile-phones/happy-new-year-deal-for-1-tb-stylish-and-best-smartphone-vivo-y300-5g.html",
+        "title": "Happy New Year Deal: 20000 \u0d30\u0d42\u0d2a\u0d2f\u0d4d\u0d15\u0d4d\u0d15\u0d4d \u0d24\u0d3e\u0d34\u0d46 1TB Vivo Y300 5G \u0d15\u0d3f\u0d1f\u0d3f\u0d32\u0d7b \u0d38\u0d4d\u0d2e\u0d3e\u0d7c\u0d1f\u0d4d\u0d1f\u0d4d \u0d2b\u0d4b\u0d7a \u0d24\u0d28\u0d4d\u0d28\u0d46 \u0d35\u0d3e\u0d19\u0d4d\u0d19\u0d3f\u0d2f\u0d3e\u0d32\u0d4b!",
+        "link": "https://www.digit.in/ml/news/mobile-phones/happy-new-year-deal-for-1-tb-stylish-and-best-smartphone-vivo-y300-5g.html",
+        "published": "Mon, 22 Dec 2025 14:34:28 +0000",
+        "source": "Digit.in",
+        "summary": "Vivo Y300 5G \u0d15\u0d41\u0d31\u0d1e\u0d4d\u0d1e \u0d35\u0d3f\u0d32\u0d2f\u0d4d\u0d15\u0d4d\u0d15\u0d4d \u0d35\u0d3e\u0d19\u0d4d\u0d19\u0d3e\u0d7b \u0d38\u0d41\u0d35\u0d7c\u0d23\u0d3e\u0d35\u0d38\u0d30\u0d02. Flipkart \u0d07\u0d24\u0d3f\u0d28\u0d3e\u0d2f\u0d3f \u0d17\u0d02\u0d2d\u0d40\u0d30 \u0d21\u0d40\u0d32\u0d3e\u0d23\u0d4d \u0d28\u0d4d\u0d2f\u0d42 \u0d07\u0d2f\u0d7c \u0d38\u0d2e\u0d4d\u0d2e\u0d3e\u0d28\u0d2e\u0d3e\u0d2f\u0d3f \u0d2a\u0d4d\u0d30\u0d16\u0d4d\u0d2f\u0d3e\u0d2a\u0d3f\u0d1a\u0d4d\u0d1a\u0d24\u0d4d. 26 \u0d36\u0d24\u0d2e\u0d3e\u0d28\u0d02 \u0d2b\u0d4d\u0d32\u0d3e\u0d31\u0d4d\u0d31\u0d4d \u0d15\u0d3f\u0d34\u0d3f\u0d35\u0d3f\u0d7d \u0d35\u0d3f\u0d35\u0d4b \u0d39\u0d3e\u0d7b\u0d21\u0d4d\u0d38\u0d46\u0d31\u0d4d\u0d31\u0d4d \u0d35\u0d3e\u0d19\u0d4d\u0d19\u0d3e\u0d2e\u0d46\u0d28\u0d4d\u0d28\u0d24\u0d3e\u0d23\u0d4d \u0d13\u0d2b\u0d7c. 20000 \u0d30\u0d42\u0d2a\u0d2f\u0d4d\u0d15\u0d4d\u0d15\u0d4d \u0d24\u0d3e\u0d34\u0d47\u0d15\u0d4d\u0d15\u0d4d \u0d38\u0d4d\u0d2e\u0d3e\u0d7c\u0d1f\u0d4d\u0d1f\u0d4d \u0d2b\u0d4b\u0d7a \u0d35\u0d3f\u0d32\u0d2f\u0d46\u0d24\u0d4d\u0d24\u0d3f\u0d2f\u0d3f\u0d30\u0d3f\u0d15\u0d4d\u0d15\u0d41\u0d28\u0d4d\u0d28\u0d41. Survey \u2705 Thank you for completing the survey! Vivo Y300 5G Price Cut in Flipkart 8 GB \u0d31\u0d3e\u0d2e\u0d41\u0d02 128 \u0d1c\u0d3f\u0d2c\u0d3f \u0d07\u0d28\u0d4d\u0d31\u0d47\u0d23\u0d7d \u0d38\u0d4d\u0d31\u0d4d\u0d31\u0d4b\u0d31\u0d47\u0d1c\u0d41\u0d2e\u0d41\u0d33\u0d4d\u0d33 \u0d38\u0d4d\u0d2e\u0d3e\u0d7c\u0d1f\u0d4d\u0d1f\u0d4d \u0d2b\u0d4b\u0d23\u0d3f\u0d28\u0d3e\u0d23\u0d4d \u0d15\u0d3f\u0d34\u0d3f\u0d35\u0d4d. 26,999 [&#8230;]"
     }
 ]
